# Lithium

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: bench.yml  build.yml  test.yml
examples/: hello_world.lt  large_file.lt  math.lt  test.lt
lang/: Cargo.toml
lang/benches/lexer/: lex_hello_world.rs  lex_large_file.rs
lang/src/: lib.rs
lang/src/lexer/: errors.rs  mod.rs  token.rs  tokens.rs
lang/src/parser/: ast.rs  errors.rs  mod.rs
lang/src/semantics/: errors.rs  mod.rs  scopes.rs  symbols.rs
lang/tests/: mod.rs
lang/tests/lexer/comments/: mod.rs  multi_line.rs  single_line.rs
lang/tests/lexer/conditions/: else.rs  if.rs  multiple.rs
lang/tests/lexer/functions/: add_function.rs  hello_world.rs  return.rs
lang/tests/lexer/loops/: break.rs  continue.rs  for.rs  while.rs
lang/tests/lexer/variables/: booleans.rs  mod.rs  numbers.rs  strings.rs
lang/tests/parser/conditions/: mod.rs
lang/tests/parser/functions/: calling.rs  declaration.rs
lang/tests/parser/variables/: booleans.rs  invalid.rs  numbers.rs  operations.rs  strings.rs
lang/tests/semantics/variables/: invalid.rs
lexer/: Cargo.toml
lexer/benches/: lex_hello_world.rs  lex_large_file.rs
lexer/src/: errors.rs  lib.rs  token.rs
lexer/tests/: lexing.rs  wrapper.rs
parser/: Cargo.toml
parser/src/: errors.rs  lib.rs
parser/tests/: wrapper.rs
src/: main.rs
src/lang/: errors.rs  lexer.rs  mod.rs  parser.rs
src/util/: timer.rs
src/utils/: timer.rs
utils/: Cargo.toml
utils/src/: errors.rs
(+28 files in other folders)
